fix header text visibility

--- a/Fronted/src/component/Header/Header.css
+++ b/Fronted/src/component/Header/Header.css
@@ -16,6 +16,23 @@
     bottom: 10%;
     left: 6vw;
     animation: fadeIn 3s;
+        z-index: 2; 
+}
+
+.header::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    background: rgba(0, 0, 0, 0.4);  /* dark overlay */
+    z-index: 1;
+}
+
+.header {
+    position: relative;   /* ✅ must */
 }
 
 .header-contents h2{
